# codex-tools

./: .gitignore  CHANGELOG.md  LICENSE  Package.swift  README.md  build_mac_app.sh  build_swiftui_app.sh  codex_sync_gui.py  generate_app_icon.py  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml  windows-build.yml
Sources/CodexSyncNative/: AppViewModel.swift  CodexSyncApp.swift  ContentView.swift  Models.swift  SyncService.swift
codex-tools/: .gitignore  README.md  package-lock.json  package.json
codex-tools/src/: main.tsx  styles.css
codex-tools/src-tauri/: Cargo.toml  tauri.conf.json
codex-tools/src-tauri/src/: lib.rs  main.rs
codex-tools/src-tauri/src/services/: codex.rs  paths.rs  webdav.rs
docs/: codex-sync.md
scripts/: install-macos.command
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/services/: bridge.rs  codex.rs  mod.rs  paths.rs  webdav.rs
src/modules/: app-types.ts  provider-pages.tsx  tool-pages.tsx  tool-registry.ts
