[package]
name = "codex-tools"
version = "0.1.9"
description = "Cross-platform Codex provider and thread sync assistant"
authors = ["Codex Tools"]
license = "MIT"
edition = "2021"

[lib]
name = "codex_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
reqwest = { version = "0.12", features = ["rustls-tls", "stream"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
toml_edit = "0.22"
walkdir = "2"
quick-xml = "0.39"
urlencoding = "2"
percent-encoding = "2"
